# Sentiment-Analysis-Flipkart-Reviews

./: .gitignore  .gitmodules  README.md  pyproject.toml
client/: server.py  utils.py
flipkart_scraper/: __main__.py  models.py  scraper.py
notebooks/: 01_process_raw_reviews.ipynb  02_merge_reviews.ipynb  03_clean_data.ipynb  04_eda.ipynb  05_vectorization_ml_models.ipynb  06_dl_models.ipynb
scripts/: download_data.py
