[tool.poetry]
name = "xebia-internship"
version = "0.1.0"
description = ""
authors = ["Tuhin Tarafder <ttarafder7d1@protonmail.com>"]
readme = "README.md"
packages = [{ include = "xebia_internship" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
contractions = "^0.1.73"
wordcloud = "^1.9.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
nltk = "^3.8.1"
scikit-learn = "^1.3.0"
numpy = "^1.24.3"
xgboost = "^1.7.6"
flask = "^2.3.2"
ipython-autotime = "^0.3.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.13.0"
tensorflow-intel = "^2.13.0"
gensim = "^4.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"
ipykernel = "^6.24.0"
gdown = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
